--- a/package.json
+++ b/package.json
@@ -6,14 +6,13 @@
     "npm": "7.6.3"
   },
   "scripts": {
-    "client": "cd crwn-cloting && npm start",
+    "client": "cd crwn-clothing && npm start",
     "server": "nodemon server.js",
     "build": "cd client && npm run build",
     "dev": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\"",
     "start": "node server.js"
   },
   "dependencies": {
-    "body-parser": "^1.19.0",
     "cors": "2.8.5",
     "dotenv": "8.2.0",
     "express": "^4.17.1",
